--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,7 @@
   color: var(--COLOR);
   display: grid;
   place-content: center;
+  margin: auto;
 }
 
 .icon-button:hover,
@@ -61,6 +62,16 @@
 
 .icon-button[disabled] {
   visibility: hidden;
+}
+
+.button__label {
+  display: grid;
+  vertical-align: text-bottom;
+  font-size: 1rem;
+}
+
+.grouping {
+  display: grid;
 }
 
 /* || GENERAL STYLES */
